# hyprquery

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  main.rs
src/queries/: mod.rs
