[package]
name = "hyprquery"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
complexity = "deny"
perf = "deny"

[dependencies]
clap = { version = "4", features = ["color", "derive"] }
color-eyre = "0.6.2"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
serde_json = "1.0.105"
